Fixed screenshotWrapper on mobile

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -374,6 +374,11 @@ header {
 .screenshotWrapper {
 	box-shadow: inset 0px 0px 0px 1px rgba(0, 0, 0, 0.2), 0px 20px 80px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
 	border-radius: 12px;
+	
+	@media (max-width:567px) {
+		max-width: 414px;
+		margin: 0px auto;
+	}
 }
 
 .screenshot {
